--- a/StorageProject.Api/StorageProject.Api.csproj
+++ b/StorageProject.Api/StorageProject.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,7 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StorageProject.Domain\StorageProject.Domain.csproj" />
+    <ProjectReference Include="..\StorageProject.Infrasctructure\StorageProject.Infrastructure.csproj" />
   </ItemGroup>
+
+
+
 
 </Project>
