--- a/StorageProject.Api/appsettings.json
+++ b/StorageProject.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StorageContext": "Server=localhost;Database=dev;Uid=developer;Pwd=Lagavi3003!;"
+  }
+
 }
