feature: configuration and IDesignTimeDbContextFactory

--- a/StorageProject.Api/appsettings.json
+++ b/StorageProject.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StorageContext": "Server=localhost;Database=dev;Uid=developer;Pwd=Lagavi3003!;"
+    "StorageContext": "server=localhost;port=3306;database=dev;user=developer;password=Lagavi30!;"
   }
 
 }
