fix:Dto product feature: unitOfWork

--- a/StorageProject.Api/StorageProject.Api.csproj
+++ b/StorageProject.Api/StorageProject.Api.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StorageProject.Application\StorageProject.Application.csproj" />
     <ProjectReference Include="..\StorageProject.Infrastructure\StorageProject.Infrastructure.csproj" />
   </ItemGroup>
 
